--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="scripts/script.js"></script>
-	<title>Tamagochi</title>
+	<title>Tamagotchi</title>
 </head>
 <body>
 	<p id="text" onclick="alertBtn()">Что бы начать нажми на меня</p>
