--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 					</div>
 				</div>
 			</div>
-			<div id="imgage"></div>
+			<div id="image"></div>
 			<div id="buttons-bottom">
-				<button onclick="coinBtn()" >$</button>
+				<button onclick="coinBtn()">$</button>
 				<button onclick="joyBtn()">Играть 10$</button>
 				<button onclick="eatBtn()">Кормить 5$</button>
 				<button onclick="healBtn()">Лечить 15$</button>
 			</div>
-			
+			<div id="window-alert"><p id="text-window"></p></div>
 		</div>
 	</div>
 </body>
