--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 			<h1>Фон</h1>
 			<div class="shop-in-block">
 
-				<button class="shop-container" onclick="shopBlue()">50$</button> 
-				<button class="shop-container" onclick="shopPink()">50$</button>
-				<button class="shop-container" onclick="shopLime()">50$</button>
-				<button class="shop-container" onclick="shopHalfRed()">50$</button>
-				<button class="shop-container" onclick="shopTurquoise()">50$</button>
-				<button class="shop-container" onclick="shopPurple()">50$</button>
-				<button class="shop-container" onclick="shopWeakBlue()">50$</button>
-				<button class="shop-container" onclick="shopHalfRedTwo()">50$</button>
+				<button id="button-shop1" class="shop-container" onclick="shopBlue()">50$</button> 
+				<button id="button-shop2" class="shop-container" onclick="shopPink()">50$</button>
+
+				<button id="button-shop3" class="shop-container" onclick="shopLime()">50$</button>
+				<button id="button-shop4" class="shop-container" onclick="shopHalfRed()">50$</button>
+				<button id="button-shop5" class="shop-container" onclick="shopTurquoise()">50$</button>
+				<button id="button-shop6" class="shop-container" onclick="shopPurple()">50$</button>
+				<button id="button-shop7" class="shop-container" onclick="shopWeakBlue()">50$</button>
+				<button id="button-shop8" class="shop-container" onclick="shopHalfRedTwo()">50$</button>
 
 			</div>
 		</div>
